--- a/src/style.scss
+++ b/src/style.scss
@@ -1,19 +1,22 @@
+/*
+  1. Font Rubick (400, 500, 600, 700);
+*/
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap');
 
 /*
-  1. Use a more-intuitive box-sizing model.
+  2. Use a more-intuitive box-sizing model.
 */
 *, *::before, *::after {
   box-sizing: border-box;
 }
 /*
-  2. Remove default margin
+  3. Remove default margin
 */
 * {
   margin: 0;
 }
 /*
-  3. Allow percentage-based heights in the application
+  4. Allow percentage-based heights in the application
 */
 html, body {
   font-size: 62.5%;
@@ -22,8 +25,8 @@ html, body {
 }
 /*
   Typographic tweaks!
-  4. Add accessible line-height
-  5. Improve text rendering
+  5. Add accessible line-height
+  6. Improve text rendering
 */
 body {
   line-height: 1.5;
@@ -31,26 +34,26 @@ body {
   font-size: 1.6rem;
 }
 /*
-  6. Improve media defaults
+  7. Improve media defaults
 */
 img, picture, video, canvas, svg {
   display: block;
   max-width: 100%;
 }
 /*
-  7. Remove built-in form typography styles
+  8. Remove built-in form typography styles
 */
 input, button, textarea, select {
   font: inherit;
 }
 /*
-  8. Avoid text overflows
+  9. Avoid text overflows
 */
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
 /*
-  9. Create a root stacking context
+  10. Create a root stacking context
 */
 #root, #__next {
   isolation: isolate;
