--- a/src/components/User/User.scss
+++ b/src/components/User/User.scss
@@ -12,9 +12,21 @@
     object-fit: cover;
   }
 
-  .userChatInfo {
+  .userInfo {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+
+    .userName {
+      font-size: 1.7rem;
+      font-weight: 500;
+    }
+
+    .userMessage {
+      font-size: 1.5rem;
+      color: #adadad;  
+    }
   }
 }
 
