--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: column;
     gap: 1em;
-    max-width: 80%;
+    max-width: 70%;
 
     p {
       background-color: rgba($color: #353535, $alpha: 0.8);
@@ -37,6 +37,7 @@
 
   &.owner {
     flex-direction: row-reverse;
+    margin-bottom: 2em;
 
     .messageInfo {
       display: none;
