--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -3,3 +3,37 @@
   background-color: #212121;
   border-right: 1px solid #3e3e3e;
 }
+
+.searchResult {
+  display: flex;
+  padding: 0.5em;
+  cursor: pointer;
+  background-color: #191919;
+  border-top: 1px solid #3e3e3e;
+  border-bottom: 1px solid #3e3e3e;
+  transition: background-color 100ms ease-in-out;
+
+  .searchUserImage {
+    width: 3.5em;
+    height: 3.5em;
+    border-radius: 50%;
+    margin-right: 1em;
+    object-fit: cover;
+  }
+
+  .searchUserInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+
+    .searchUserName {
+      font-size: 1.7rem;
+      font-weight: 400;
+    }
+  }
+}
+
+.searchResult:hover {
+  background-color: rgba($color: #ffffff, $alpha: 0.1);
+}
