--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -20,6 +20,7 @@
   .messageContent {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 1em;
     max-width: 70%;
 
