--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -17,6 +17,7 @@
         height: 1.8em;
         transform: rotate(30deg);
         cursor: pointer;
+        margin-right: 0.2em;
       }
     }
   
