--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: end;
     color: #6e6e6e;
 
     img {
@@ -21,35 +22,46 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 1em;
-    max-width: 70%;
+    min-width: 25%;
+    max-width: 40%;
+    border-radius: 0.6em 0.6em 0.6em 0em;
+    background-color: #242c38;
+    overflow: hidden;
 
-    p {
-      background-color: rgba($color: #353535, $alpha: 0.8);
-      color: #ffffff;
-      padding: 0.4em 0.7em;
-      border-radius: 0.2em;
+    .messageUsername {
+      font-size: 1.7rem;
+      color: #6692de;
+      padding: 0.7em 0.7em 0.5em 0.7em;
     }
 
-    img {
-      width: 50%;
+    .messageImage {
+      object-fit: contain;
+      width: 100%;
+      margin-bottom: 0.5em;
+    }
+
+    .messageText {
+      width: 100%;
+      padding: 0em 0.7em 0em 0.7em;
+    }
+
+    .messageDate {
+      width: 100%;
+      text-align: end;
+      font-size: 1.4rem;
+      color: #adadad;
+      padding: 0.3em 0.5em 0.3em 0em;   
     }
   }
 
   &.owner {
-    flex-direction: row-reverse;
-    margin-bottom: 2em;
-
-    .messageInfo {
-      display: none;
-    }
 
     .messageContent {
-      align-items: flex-end;
-      p {
-        background-color: rgba($color: #6f50cd, $alpha: 0.8);
-        max-width: max-content;
-      } 
+      background-color: #382c3b;
+      
+      .messageUsername {
+        color: #36cfda;
+      }
     }
   }
 }
